--- a/nosotros/nosotros.css
+++ b/nosotros/nosotros.css
@@ -22,9 +22,11 @@ body {
 }
 
 .contenedor1cabeza .imagenencabezado {
+    display: flex;
     width: 35px;
     height: 33px;
-    margin-left: 5%;
+    margin-right: 5%;
+    align-items: center;
 }
 
 .contenedor1cabeza .imagenencabezado img {
